fix broken layout caused by col-sm-12 checkboxes, fixed click handler on license info

--- a/src/TrueOrFalse.Frontend.Web/Style/site.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/site.less
@@ -1855,11 +1855,6 @@ b, strong {
 
     }
 
-    .is-solutionordered-checkbox {
-        margin-bottom: 25px;
-    }
-
-
     .edit-question-modal-header {
         display: flex;
         justify-content: space-between;
@@ -2188,6 +2183,14 @@ p.is-editor-empty:first-child::before {
     margin-bottom: 20px;
 }
 
+.checkbox-container {
+    padding: 10px;
+
+    .checkbox {
+        margin: 0;
+    }
+}
+
 
 textarea, input {
     &::placeholder {
@@ -2202,6 +2205,7 @@ textarea, input {
         border-radius: 0;
     }
 }
+
 
 /*Generic Bootstrap*/
 
